| Summary: | ASTERISK-26138: chan_unistim: Under FreeBSD, chan_unistim generates a compile error | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2016-06-22 08:48:19 | Date Closed: | 2016-06-22 18:52:54 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_unistim |
| Versions: | SVN 13.9.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | FreeBSD 10 gcc 4.8.5 | Attachments: | |
| Description: | Under FreeBSD, chan_unistim generates a compile error:
{noformat} [CC] chan_unistim.c -> chan_unistim.o chan_unistim.c: In function 'get_to_address': chan_unistim.c:1024:36: error: argument to 'sizeof' in 'memcpy' call is the same expression as the destination; did you mean to remove the addressof? [-Werror=sizeof-pointer-memaccess] memcpy(&toAddr, &public_ip, sizeof(&toAddr)); {noformat} ^ | ||
| Comments: | |||